# itk-wasm

./: CMakeLists.txt  README.md  package-lock.json  package.json
doc/content/docs/: index.md
include/: itkOutputImageIO.h
src/: itkConfig.ts  itkWasmImageIOBase.cxx
src/docker/: build.sh
src/docker/itk-wasm-base/: Dockerfile
src/io/: ReadImageFileSeriesResult.ts  ReadImageResult.ts  readImageDICOMArrayBufferSeries.ts  readImageDICOMFileSeries.ts
src/io/internal/pipelines/dicom/: CMakeLists.txt  apply-pstate-to-image.cxx
src/io/internal/pipelines/image/ReadDICOM/: CMakeLists.txt  ReadImageDICOMFileSeries.cxx
src/web-workers/: ITKConfig.ts  WebWorkerInput.ts  pipeline.worker.ts
test/: CMakeLists.txt
test/Input/: gsps-pstate-test-input-pstate.dcm.cid  gsps-pstate2-baseline.json.cid
